--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -348,31 +348,36 @@ canvas {
 }
 
 .container section article .card .info .btn-container {
+  margin: 1rem auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-animation: fadeIn 1s ease-in;
+          animation: fadeIn 1s ease-in;
 }
 
 .container section article .card .info .btn-container a {
-  color: white;
-  border: solid 0.1rem white;
-  margin: 1rem 0.5rem;
-  padding: 0.5rem 1.5rem;
-  font-size: 20px;
+  z-index: 2;
+  -webkit-animation: swipeFromLeft 0.5s ease-in;
+          animation: swipeFromLeft 0.5s ease-in;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #cfcfcf;
+  margin: 0 0.5rem;
+  border: solid 0.01rem #908282;
+  padding: 0.5rem 1.2rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  letter-spacing: 0.5rem;
 }
 
 .container section article .card .info .btn-container a:hover {
-  background-color: white;
-  color: black;
-  -webkit-transition: opacity 0.3s, border 0.3s;
-  transition: opacity 0.3s, border 0.3s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  color: white;
+  background-color: black;
+  -webkit-transition: opacity 0.2s, border 0.3s;
+  transition: opacity 0.2s, border 0.3s;
 }
 
 .container section footer {
