--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -270,23 +270,28 @@ canvas {
           }
 
           .btn-container {
+            margin: 1rem auto;
             display: flex;
-            justify-content: flex-start;
+            animation: fadeIn 1s ease-in;
+
             a {
-              color: white;
-              border: solid 0.1rem rgb(255, 255, 255);
-              margin: 1rem 0.5rem;
-              padding: 0.5rem 1.5rem;
-              font-size: 20px;
+              z-index: 2;
+              animation: swipeFromLeft 0.5s ease-in;
+              transition: 0.3s;
+              color: rgb(207, 207, 207);
+              margin: 0 0.5rem;
+              border: solid 0.01rem #908282;
+              padding: 0.5rem 1.2rem;
+              font-size: 1.2rem;
               text-transform: uppercase;
-              letter-spacing: 0.2rem;
-              transition: 0.5s;
+              letter-spacing: 0.5rem;
             }
 
             a:hover {
-              background-color: rgb(255, 255, 255);
-              color: rgb(0, 0, 0);
-              transition: opacity 0.3s, border 0.3s;
+              transition: 0.5s;
+              color: rgb(255, 255, 255);
+              background-color: black;
+              transition: opacity 0.2s, border 0.3s;
             }
           }
         }
