--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -299,6 +299,10 @@ html {
   line-height: 1.1;
 }
 
+.container section article .text span {
+  color: #908282;
+}
+
 .container section article .card {
   background-color: rgba(0, 0, 0, 0.267);
   border: solid 0.1rem white;
@@ -368,6 +372,10 @@ html {
   background-color: black;
   -webkit-transition: opacity 0.2s, border 0.3s;
   transition: opacity 0.2s, border 0.3s;
+}
+
+.container section article .card img {
+  width: 50%;
 }
 
 .container section footer {
@@ -455,7 +463,6 @@ html {
     font-size: 5vw;
   }
   .container header main {
-    background-color: red;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -467,7 +474,6 @@ html {
   }
   .container header main .text {
     max-width: 100%;
-    background-color: blue;
   }
   .container header main .text h1 {
     font-weight: normal;
@@ -489,7 +495,6 @@ html {
     padding: 1.5vw 4vw;
   }
   .container section aside {
-    background-color: red;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -500,7 +505,6 @@ html {
     margin: 15vw 0;
   }
   .container section aside .text {
-    background-color: blue;
     max-width: inherit;
     padding: 1rem;
   }
@@ -514,6 +518,46 @@ html {
     font-size: 5vw;
     text-align: left;
     font-weight: normal;
+  }
+  .container section article {
+    padding: 1.5rem;
+    margin: 15vw 0;
+  }
+  .container section article .text {
+    max-width: 100%;
+    padding: 1rem;
+  }
+  .container section article .text h2 {
+    font-size: 10vw;
+    text-align: left;
+    font-weight: normal;
+    line-height: 1.25;
+  }
+  .container section article .card {
+    padding: 1rem;
+  }
+  .container section article .card .info {
+    width: 100%;
+  }
+  .container section article .card .info h1 {
+    font-size: 9vw;
+    text-align: left;
+    font-weight: normal;
+  }
+  .container section article .card .info p {
+    font-size: 4vw;
+  }
+  .container section article .card .info .btn-container {
+    margin: 2rem auto;
+  }
+  .container section article .card .info .btn-container a {
+    margin: 0 0.5vw;
+    padding: 2vw 5vw;
+    font-size: 4vw;
+    letter-spacing: 0.3;
+  }
+  .container section article .card img {
+    width: 100%;
   }
 }
 
