--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -224,6 +224,10 @@ html {
           color: rgb(231, 231, 231);
           line-height: 1.1;
         }
+
+        span {
+          color: #908282;
+        }
       }
 
       .card {
@@ -284,6 +288,10 @@ html {
               transition: opacity 0.2s, border 0.3s;
             }
           }
+        }
+
+        img {
+          width: 50%;
         }
       }
     }
@@ -378,14 +386,14 @@ html {
       }
 
       main {
-        background-color: red;
+        //background-color: red;
         display: flex;
         justify-content: flex-start;
         padding: 1.5rem;
         margin: 15vw 0;
         .text {
           max-width: 100%;
-          background-color: blue;
+          //background-color: blue;
           h1 {
             font-weight: normal;
             text-align: left;
@@ -409,14 +417,14 @@ html {
 
     section {
       aside {
-        background-color: red;
+        //background-color: red;
         display: flex;
         justify-content: center;
         padding: 1.5rem;
         margin: 15vw 0;
 
         .text {
-          background-color: blue;
+          //background-color: blue;
           max-width: inherit;
           padding: 1rem;
 
@@ -436,6 +444,56 @@ html {
       }
 
       article {
+        //background-color: red;
+        padding: 1.5rem;
+        margin: 15vw 0;
+
+        .text {
+          max-width: 100%;
+          //background-color: blue;
+          padding: 1rem;
+          
+
+          h2 {
+            font-size: 10vw;
+            text-align: left;
+            font-weight: normal;
+            line-height: 1.25;
+          }
+        }
+
+        .card {
+          padding: 1rem;
+
+          .info {
+            width: 100%;
+
+            h1 {
+              font-size: 9vw;
+              text-align: left;
+              font-weight: normal;
+            }
+
+            p {
+              font-size: 4vw;
+            }
+
+            .btn-container {
+              margin: 2rem auto;
+
+              a {
+                margin: 0 0.5vw;
+                padding: 2vw 5vw;
+                font-size: 4vw;
+                letter-spacing: 0.3;
+              }
+            }
+          }
+
+          img {
+            width: 100%;
+          }
+        }
       }
 
       footer {
