--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -199,7 +199,7 @@ html {
 }
 
 .container header main .text h1 {
-  font-size: 5.85rem;
+  font-size: 5.05vw;
   -webkit-animation: fadeIn 0.6s ease-in;
           animation: fadeIn 0.6s ease-in;
   color: white;
@@ -268,13 +268,13 @@ html {
   width: 100%;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  padding: 10rem 0;
+  padding: 10rem 1rem;
   -webkit-animation: swipeFromRight 1s ease-out;
           animation: swipeFromRight 1s ease-out;
 }
 
 .container section aside .text h2 {
-  font-size: 3.85rem;
+  font-size: 3.41vw;
   -webkit-animation: fadeIn 0.6s ease-in;
           animation: fadeIn 0.6s ease-in;
   font-weight: normal;
@@ -290,7 +290,7 @@ html {
   margin: 1rem 0;
   color: #f3f3f3;
   padding: 1rem 0rem;
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-top: solid 0.2rem #908282;
@@ -414,8 +414,16 @@ html {
   transition: opacity 0.2s, border 0.3s;
 }
 
-.container section article .card img {
+.container section article .card .img {
+  padding: 1rem;
   max-width: 50%;
+}
+
+.container section article .card .img img {
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container section footer {
@@ -513,90 +521,46 @@ button:focus {
   outline: none;
 }
 
-@media screen and (max-width: 1500px) {
-  body {
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
+@media screen and (max-width: 1200px) {
+  .container header main .text h1 {
+    font-size: 5.5vw;
   }
-  .container {
+  .container header main .btn-container a {
+    font-size: 2vw;
+  }
+  .container section aside .text h2 {
+    font-size: 5vw;
+  }
+  .container section aside .text p {
+    font-size: 2.5vw;
+  }
+  .container section article .card {
+    display: block;
     padding: 0;
-    margin: 0;
+    width: 100%;
   }
-  .container main {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .container section article .card .info {
+    max-width: 100%;
+  }
+  .container section article .card .info p {
+    font-size: 1.4rem;
+  }
+  .container section article .card .info .technologies-container {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    padding: 1.5rem;
-    margin: 15vw 0;
-  }
-  .container main .text {
-    max-width: 100%;
-  }
-  .container main .text h1 {
-    font-weight: normal;
-    text-align: left;
-    font-size: 5.6vw !important;
-  }
-  .container section aside {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding: 1.5rem;
-    margin: 15vw 0;
-  }
-  .container section aside .text {
-    padding: 1rem;
-  }
-  .container section aside .text h2 {
-    text-align: left;
-    font-weight: normal;
-    font-size: 4.6vw !important;
-  }
-  .container section article {
-    padding: 1.5rem;
-    margin: 15vw 0;
-  }
-  .container section article .text {
-    max-width: 100%;
-    padding: 1rem;
-  }
-  .container section article .text h2 {
-    font-size: 4.6vw !important;
-    text-align: left;
-    font-weight: normal;
-    line-height: 1.25;
-  }
-  .container section article .card {
-    padding: 1rem;
-  }
-  .container section article .card .info {
-    width: 50%;
-  }
-  .container section article .card .info h1 {
-    font-size: 3rem;
-    text-align: left;
-    font-weight: normal;
-  }
-  .container section article .card .info p {
-    font-size: 1.2rem;
   }
   .container section article .card .info .btn-container {
-    margin: 2rem auto;
+    margin: 1rem 0;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
-  .container section article .card .info .btn-container a {
-    margin: 0 0.5vw;
-    padding: 1rem 2rem;
-    font-size: 1rem;
-    letter-spacing: 0.3;
+  .container section article .card .img {
+    max-width: 100%;
   }
-  .container section article .card img {
-    width: 50%;
+  .container section footer {
+    display: block;
   }
 }
 
