--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -61,7 +61,6 @@ html {
   width: 100%;
 
   header {
-
     nav {
       animation: swipeFromLeft 1s ease-out;
       transition: 2s;
@@ -127,7 +126,7 @@ html {
         animation: swipeFromRight 1s ease-out;
 
         h1 {
-          font-size: 5.85rem;
+          font-size: 5.05vw;
           animation: fadeIn 0.6s ease-in;
           color: rgb(255, 255, 255);
           line-height: 1.4;
@@ -169,7 +168,6 @@ html {
   }
 
   section {
-
     aside {
       display: flex;
       justify-content: flex-start;
@@ -181,11 +179,11 @@ html {
       .text {
         width: 100%;
         transition: 0.5s;
-        padding: 10rem 0;
+        padding: 10rem 1rem;
         animation: swipeFromRight 1s ease-out;
 
         h2 {
-          font-size: 3.85rem;
+          font-size: 3.41vw;
           animation: fadeIn 0.6s ease-in;
           font-weight: normal;
           color: rgb(255, 255, 255);
@@ -200,7 +198,7 @@ html {
           margin: 1rem 0;
           color: rgb(243, 243, 243);
           padding: 1rem 0rem;
-          font-size: 1.5rem;
+          font-size: 1.5vw;
           transition: 0.5s;
           border-top: solid 0.2rem #908282;
           border-bottom: solid 0.2rem #908282;
@@ -301,8 +299,16 @@ html {
           }
         }
 
-        img {
+        .img {
+          padding: 1rem;
           max-width: 50%;
+
+          img {
+            width: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+          }
         }
       }
     }
@@ -394,98 +400,70 @@ button:focus {
   outline: none;
 }
 
-@media screen and (max-width: 1500px) {
-  body {
-    transition: all 0.3s;
-  }
-
+@media screen and (max-width: 1200px) {
   .container {
-    padding: 0;
-    margin: 0;
+    header {
+      main {
+        .text {
+          h1 {
+            font-size: 5.5vw;
+          }
+        }
 
-    main {
-      display: flex;
-      justify-content: flex-start;
-      padding: 1.5rem;
-      margin: 15vw 0;
-
-      .text {
-        max-width: 100%;
-
-        h1 {
-          font-weight: normal;
-          text-align: left;
-          font-size: 5.6vw !important;
+        .btn-container {
+          a {
+            font-size: 2vw;
+          }
         }
       }
     }
-
     section {
       aside {
-        display: flex;
-        justify-content: center;
-        padding: 1.5rem;
-        margin: 15vw 0;
+        .text {
+          h2 {
+            font-size: 5vw;
+          }
+
+          p {
+            font-size: 2.5vw;
+          }
+        }
+      }
+      article {
 
         .text {
-          padding: 1rem;
+        }
 
-          h2 {
-            text-align: left;
-            font-weight: normal;
-            font-size: 4.6vw !important;
+        .card {
+          display: block;
+          padding: 0;
+          width: 100%;
+
+          .info {
+            max-width: 100%;
+
+            p {
+              font-size: 1.4rem;
+            }
+
+            .technologies-container {
+              justify-content: flex-start;
+            }
+
+            .btn-container {
+              margin: 1rem 0;
+              justify-content: flex-start;
+            }
+          }
+
+          .img {
+            max-width: 100%;
           }
         }
       }
 
-      article {
-        padding: 1.5rem;
-        margin: 15vw 0;
-
-        .text {
-          max-width: 100%;
-          padding: 1rem;
-
-          h2 {
-            font-size: 4.6vw !important;
-            text-align: left;
-            font-weight: normal;
-            line-height: 1.25;
-          }
-        }
-
-        .card {
-          padding: 1rem;
-
-          .info {
-            width: 50%;
-
-            h1 {
-              font-size: 3rem;
-              text-align: left;
-              font-weight: normal;
-            }
-
-            p {
-              font-size: 1.2rem;
-            }
-
-            .btn-container {
-              margin: 2rem auto;
-
-              a {
-                margin: 0 0.5vw;
-                padding: 1rem 2rem;
-                font-size: 1rem;
-                letter-spacing: 0.3;
-              }
-            }
-          }
-
-          img {
-            width: 50%;
-          }
-        }
+      footer {
+        display: block;
       }
     }
   }
